# cytests

./: .gitignore  README.md  setup.cfg  setup.py
src/cytests/: _funcs.c  _funcs.pyx  funcs.py  main.py
