[metadata]
name = cytests
version = 0.0.0
author = omid-b
author_email = omid.bagherpur@gmail.com
description = a simple package to test cython speed up
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/omid-b/cytests
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    Cython

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cytests = cytests.main:main

